objects/Learning_Board_Learning__c.object
<CustomObject>
    <description>Created: Venkatesh S\Veeresh Alur 
Date: 17/11/2013 
Capablity: ES Offering 
Release: 1 
Description: Intersection Object between Learning Board and Learning to support Many to Many relationships</description>
    <fields>
        <fullName>Display_Sequence_Nbr__c</fullName>
        <label>Display Sequence Nbr</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Learning_Board_ID__c</fullName>
        <label>Learning Board ID</label>
        <referenceTo>Learning_Board__c</referenceTo>
        <relationshipLabel>Learning Board Learnings</relationshipLabel>
        <relationshipName>Learning_Board_Learnings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Learning_Category_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Category Id</label>
        <referenceTo>Learning_Category__c</referenceTo>
        <relationshipLabel>Learning Board Learnings</relationshipLabel>
        <relationshipName>Learning_Board_Learnings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Learning_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Learning ID</label>
        <referenceTo>Learning__c</referenceTo>
        <relationshipLabel>Learning Board Learnings</relationshipLabel>
        <relationshipName>Learning_Board_Learnings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Learning_Category_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Learning Category ID</label>
        <referenceTo>User_Learning_Category__c</referenceTo>
        <relationshipLabel>Learning Board Learnings</relationshipLabel>
        <relationshipName>Learning_Board_Learnings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Learning Board Learning</label>
    <nameField>
        <displayFormat>LL-{0000000000}</displayFormat>
        <label>Learning Board Learning ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Board Learnings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>